// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endpoint parameters in tables are hoisted to the top of the table if marked as required by the spec 1`] = `
"<div class="openapi">

# ParameterOrder

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Query parameters

#|||
 **Name** 
|
 **Description** 
||

||
 id<span class="openapi__required">*</span> {.openapi-table-parameter-name} 
|
 **Type:** string&lt;uuid&gt;

Internal ID for the requested star 
||

||
 catalogueCCDM {.openapi-table-parameter-name} 
|
 **Type:** string

CCDM designation for the requested star 
||

||
 name {.openapi-table-parameter-name} 
|
 **Type:** string

Name for the requested star 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Endpoint parameters in tables are ordered lexicographically by default 1`] = `
"<div class="openapi">

# ParameterOrder

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Query parameters

#|||
 **Name** 
|
 **Description** 
||

||
 catalogueCCDM {.openapi-table-parameter-name} 
|
 **Type:** string

CCDM designation for the requested star 
||

||
 id {.openapi-table-parameter-name} 
|
 **Type:** string&lt;uuid&gt;

Internal ID for the requested star 
||

||
 name {.openapi-table-parameter-name} 
|
 **Type:** string

Name for the requested star 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;
